--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,11 @@
 SUPABASE_URL=
 SUPABASE_KEY=
 GROQ_API_KEY=
+LANGCHAIN_ENDPOINT=
 LANGCHAIN_API_KEY=
 LANGCHAIN_TRACING_V2=true
-LANGCHAIN_PROJECT=piwrite-v2
-OPENAI_API_KEY= # If needed for embeddings, else use Groq/Local
+LANGCHAIN_PROJECT=PiWrite
+TAVILY_API_KEY=
+GOOGLE_API_KEY=
+HF_TOKEN =
+MOCK_IMAGES=false
